fixed alignment

--- a/mortgage-app/src/app/components/get-started-page/get-started-page.component.scss
+++ b/mortgage-app/src/app/components/get-started-page/get-started-page.component.scss
@@ -54,7 +54,7 @@
   width: 100px;
   height: 35px;
   cursor: pointer;
-  margin-left: -45px;
+  margin-left: -35px;
 }
 
 #get-started-button:focus {
